--- a/core_modules/Workbench/View/Style/WarningFrontend.css
+++ b/core_modules/Workbench/View/Style/WarningFrontend.css
@@ -1,5 +1,8 @@
 
 #workbenchWarning {
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: 1000001;
     width: 100%;
     height: 20px;
